--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="../client/src/assets/NutriIcon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/NutriIcon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NutriWings</title>
   </head>
